# gramform

./: MANIFEST.in  README.md  noxfile.py  pyproject.toml
src/gramform/: __init__.py  dfops.py  grammar.py  imops.py  tagops.py
tests/: test_dfops.py  test_grammar.py  test_imops.py  test_tagops.py
