[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gramform"
version = "0.0.0.dev0"
description = "Grammar for string-to-function formulae"
authors = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
maintainers = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dfops = [
    "pandas",
]
imops = [
    "nibabel",
    "jax >= 0.3.16",
]
full = [
    "pandas",
    "nibabel",
    "jax >= 0.3.16",
]
dev = [
    "matplotlib",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "blue",
    "templateflow",
]

[project.urls]
"Homepage" = "https://github.com/hypercoil/gramform"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.run]
branch = true
omit = [
    '*test*',
    '*__init__*',
]

[tool.ruff]
lint.ignore = []
line-length = 79
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
